assets/css/style.css
/* Colours generated from https://hover.dev/css-color-palette-generator
based on a main colour of rebeccapurple (#663399) */
:root {
  --primary: #663399;
  --primary-content: #e6d9f2;
  --primary-dark: #4c2673;
  --primary-light: #7f40bf;

  --secondary: #993333;
  --secondary-content: #f2d9d9;
  --secondary-dark: #732626;
  --secondary-light: #bf4040;

  --background: #191320;
  --foreground: #261d30;
  --border: #403050;

  --copy: #fbfafc;
  --copy-light: #d9cfe2;
  --copy-lighter: #a68fbc;

  --success: #339933;
  --warning: #999933;
  --error: #993333;
  --success-content: #d9f2d9;
  --warning-content: #000000;
  --error-content: #f2d9d9;
}
/* reset CSS */
* {
  margin: 0;
  padding: 0;
}

/* fonts from googlefonts suggested by https://fontjoy.com */
body {
  /* Set main font with backup fonts */
  font-family: "Rubik", "Molengo", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  background-color: var(--background);
  color: var(--copy-light);
}
/* set all paragraphs font to Molengo */
p {
  font-family: "Molengo", sans-serif;
}

#content {
  margin: 0 auto;
  text-align: center;
  background-color: var(--foreground);
  color: var(--copy-light);
}
#game-board {
  background-color: var(--primary);
}
/* flex layout for table-top */
#table-top {
  background-color: var(--primary-dark);
  color: var(--copy-light);
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  align-content: space-around;
}

#score {
  display: none;
  font-size: 1.2em;
  border: var(--copy-light) inset 2px;
  border-radius: 5px;
  width: fit-content;
  margin: 0 auto;
  padding: 2px;
}
#modal-instructions p > span {
  text-decoration: underline;
}
#modal-highscore p {
  font-size: 2.5em;
}
/* div for in-game notification set in middle of screen and transparent */
#notification {
  display: none; /* default hidden */
  position: absolute;
  top: 40vh;
  width: 100%;
  background-color: transparent;
  margin: 0 auto;
  text-align: center;
  font-size: 2em;
  /* using shadow four times to make an outline */
  text-shadow: 1px 1px 2px var(--foreground), -1px -1px 2px var(--foreground),
    -1px 1px 2px var(--foreground), 1px -1px 2px var(--foreground);
}
.chango {
  font-family: "Chango", sans-serif;
  font-size: 1.5em;
}
.btn-1 {
  margin: 3px;
  padding: 2px 10px;
  background-color: var(--secondary-dark);
  color: var(--secondary-content);
  border: var(--border) outset 3px;
  border-radius: 5px;
}
.btn-1:hover {
  color: var(--copy-light);
  background-color: var(--primary-dark);
}
.card {
  margin: 0.25em auto;
  border: var(--primary-light) solid 3px;
  border-radius: 10%;
  height: 23vw;
  width: 23vw;
  background: url("../images/ggi-200-cardback.jpg") no-repeat center/100%;
  font-size: 2em;
  align-content: center;
  transition: 1s ease-in-out;
}
/* make sure images will match the background card */
.card img {
  width: inherit;
  height: inherit;
  object-fit: cover;
  border-radius: 10%;
}

footer {
  min-height: 50px;
  align-content: flex-end;
  margin-top: auto;
}
/* styles for modals */
/* Modal background. full screen and darken content */
.modal {
  display: none; /* Initially hidden */
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  /* fix to top centre of display */
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
}
/* Style modal and contents */
.modal-content {
  background-color: var(--background);
  border: var(--border) solid 5px;
  margin: 20vh auto;
  width: 80vw;
  padding: 15px;
  position: relative;
}
/* style the close button icon */
/* absolute positioning relative to the parent modal-content */
.close-button {
  font-size: 2em;
  font-weight: bold;
  background-color: var(--foreground);
  border: var(--primary-light) solid 2px;
  border-radius: 3px;
  /* position button so it sits above the modal content box */
  margin-top: -10px;
  padding: 2px 5px;
  cursor: pointer;
  position: absolute;
  right: 5px;
  top: 5px;
}
/* class applied when card is revealed */
.revealed {
  background-image: none;
}

/*
-- Media Queries below -- 
*/
@media screen and (min-width: 670px) {
  /*increase card margins a little for aesthetics */
  .card {
    margin: 0.3em;
    max-width: 142px;
    max-height: 142px;
  }
  /* space out top links on wider screens */
  #info-links {
    display: flex;
    justify-content: space-between;
    padding: 2em;
  }
  #notification {
    font-size: 2.5em;
  }
}
@media screen and (min-width: 1110px) {
  .card {
    max-width: 175px;
    max-height: 175px;
  }
}
#notification {
  font-size: 3em;
}
@media screen and (min-width: 1296px) {
  .card {
    max-width: 200px;
    max-height: 200px;
  }
}
@media screen and (min-width: 1510px) {
  #game-board {
    width: 1500px;
    /* center on screen as screen gets wider than game board */
    margin: 0 auto;
  }
  .modal-content {
    width: 50vw;
  }
}

